# tch-gpt2-poc

./: .gitignore  1B.config.json  Cargo.toml  README.md  computational-graph.txt
src/: attention.rs  main.rs  transformers.rs
src/falcon/: config.rs  configuration_RW.py  device.rs  loader.rs  main.rs  model.py  model.rs
src/generate/: config.rs  loader.rs  main.rs
src/gpt2/: attention.rs
src/quantization/: main.rs
