[package]
name = "tch-transformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tch = "0.13.0"
tokenizers = { version = "0.13.3", features = ["http"] }

[[bin]]
name = "generate"
path = "src/generate/main.rs"

[[bin]]
name = "quantize"
path = "src/quantization/main.rs"

[[bin]]
name = "falcon"
path = "src/falcon/main.rs"
